--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -13,7 +13,7 @@
 <body>
   <section>
     <a href="./index.html">Go to home</a>
-    <h1>Welcome to Snackbar</h1>
+    <h1>Welcome to Snackbar!</h1>
     <form class="form">
       <label>
         Delay (ms)
